syntax = "proto3";

option csharp_namespace = "Provider.Grpc.Protos";

package Provider;

service ProviderInquiryProtoService{
	rpc Inquiry (InquiryRequest) returns (InquiryResponse);
}

//inquiry request
message InquiryRequest {
    repeated InputParameter input_parameter_list = 1;
    int32 denomination_id = 2;
    string billing_account = 3;
    string request_id = 4;
    int32 provider_id = 5;
    string biller_code = 6;
}
message InputParameter {
  string key = 1;
  string value = 2;
}

//inquiry response
message Details {
  string key = 1;
  string value = 2;
}
message InquiryResponse {
  string transaction_id = 1; 
  string status = 2;         
  string status_text = 3;    
  string date_time = 4;      
  repeated Details details_list = 5;  
  double amount = 6;         
  double fees = 7;           
}